The newly added logs are inserted in temporary vector and flushed all together in the model by the TableUpdater thread.
rows, the vector associating each row of the table with the key of the log displayed by the table is of type RowEntries.


git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@98926 523d945c-050c-4681-91ec-863ad3bb968a